Fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ body {
 #root {
   width: 95%;
   margin: 0 auto;
+  height: 100vh;
   padding: 20px 0;
 }
 
@@ -49,6 +50,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  width: 90%;
+  height: 100vh;
   /* border: 1px solid red; */
 }
 
@@ -82,11 +85,10 @@ body {
 *****************************/
 #button-bar {
   display: flex;
-  /* flex-direction: row; */
 }
 
 .btn-wrap {
-  margin: 0 20px;
+  margin: 5px 20px;
 }
 
 button {
@@ -117,7 +119,7 @@ button.backToHomeBtn {
 
 img {
   max-width: 100%;
-  max-height: 400px;
+  height: 400px;
   filter: opacity(80%) hue-rotate(240deg);
   border-radius: 10px;
 }
@@ -142,25 +144,16 @@ img {
   left: 0;
 }
 
-/* .payer iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-} */
-
-
-
 /*****************************
-*        PARAGRAPHS
+*    PARAGRAPHS & SPANS
 *****************************/
+span,
 p {
   /* Changing the text itself */
   font-size: .6rem;
   text-align: center;
   margin-bottom: 1em;
-  width: 90%;
+  width: 80%;
 }
 
 /*****************************
@@ -178,7 +171,50 @@ h3 {
 /*****************************
 *          MODAL
 *****************************/
+/* .modal {
+  position: absolute;
+  margin: 0 auto;
+  padding: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  background-color: #1C1C1C;
+  background: cover;
+} */
 
+/*****************************
+*        INVENTORY
+*****************************/
+#inventory {
+  position: fixed;
+  z-index: 200;
+  left: 0;
+  display: inline-block;
+  margin: 10px;
+}
+
+#inventory span {
+  display: block;
+  border: 2px solid orange;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 10px;
+}
+
+#inventory #gold-key {
+  border-color: gold;
+}
+
+#inventory #silver-key {
+  border-color: silver;
+}
 
 /*****************************
 *      MEDIA QUERIES
@@ -191,6 +227,7 @@ h3 {
     width: 70%;
   }
 
+  span,
   p {
     font-size: 0.55rem;
   }
@@ -215,10 +252,11 @@ h3 {
   }
 
   img {
-    max-height: 400px;
+    height: 400px;
     filter: blur(1px) opacity(80%) hue-rotate(240deg);
   }
 
+  span,
   p {
     width: 85%;
     font-size: 1.1rem;
